# HearTerm

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
src/: App.tsx  index.css  themes.css  tokens.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  events.rs  lib.rs  main.rs
src-tauri/src/commands/: connection.rs  mod.rs  settings.rs  sftp.rs  terminal.rs  transfer.rs
src-tauri/src/ssh/: config.rs  mod.rs  session.rs  sftp.rs
src-tauri/src/storage/: crypto.rs  db.rs  keyring.rs  mod.rs  models.rs
src-tauri/src/transfer/: download.rs  engine.rs  mod.rs  resume.rs  upload.rs
src/components/dialogs/: ConnectionDialog.tsx
src/components/files/: FilePanel.tsx  TransferQueue.tsx
src/components/sidebar/: ConnectionList.tsx
src/components/terminal/: TerminalPanel.tsx
src/stores/: connectionStore.ts  settingsStore.ts  terminalStore.ts  themeStore.ts  transferStore.ts
