[package]
name = "hear-term"
version = "0.3.0"
edition = "2021"

[lib]
name = "hear_term_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
russh = "0.45"
russh-sftp = "2.0"
rusqlite = { version = "0.31", features = ["bundled"] }
keyring = "3.0"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
aes-gcm = "0.10"
argon2 = "0.5"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
thiserror = "1"
anyhow = "1"
async-trait = "0.1"
